Fix: Correctly instrument newproc1 for Go 1.23+ parameter counts (#13188)

--- a/.github/workflows/plugin-tests.yaml
+++ b/.github/workflows/plugin-tests.yaml
@@ -105,6 +105,7 @@ jobs:
           - go-elasticsearchv8
           - goframe
           - so11y
+          - cross-goroutine
     steps:
       - uses: actions/checkout@v2
         with:
