--- a/test/plugins/scenarios/cross-goroutine/plugin.yml
+++ b/test/plugins/scenarios/cross-goroutine/plugin.yml
@@ -14,16 +14,15 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-entry-service: http://${HTTP_HOST}:${HTTP_PORT}/consumer
+entry-service: http://${HTTP_HOST}:${HTTP_PORT}/execute
 health-checker: http://${HTTP_HOST}:${HTTP_PORT}/health
 start-script: ./bin/startup.sh
-framework: github.com/kataras/iris/v12
+framework: go
 export-port: 8080
 support-version:
   - go: 1.19
-    framework:
-      - v12.2.0
+  - go: 1.20
   - go: 1.21
-    framework:
-      - v12.2.5
-      - v12.2.0
+  - go: 1.22
+  - go: 1.23
+  - go: 1.24
