--- a/.github/workflows/plugin-tests.yaml
+++ b/.github/workflows/plugin-tests.yaml
@@ -128,6 +128,8 @@ jobs:
             sudo curl -L "https://github.com/docker/compose/releases/download/1.29.2/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
             sudo chmod +x /usr/local/bin/docker-compose
           fi
+      - name: Setup remote debug session
+        uses: mxschmitt/action-tmate@v3
       - name: Run Test
         run: bash test/plugins/run.sh ${{ matrix.case }}
       - uses: actions/upload-artifact@v4
