--- a/.github/workflows/plugin-tests.yaml
+++ b/.github/workflows/plugin-tests.yaml
@@ -106,6 +106,7 @@ jobs:
           - goframe
           - so11y
           - cross-goroutine
+          - kafka-reporter
     steps:
       - uses: actions/checkout@v2
         with:
