--- a/test/e2e/case/grpc/e2e.yaml
+++ b/test/e2e/case/grpc/e2e.yaml
@@ -21,6 +21,8 @@ setup:
   timeout: 1200
   init-system-environment: ../../script/env
   steps:
+    - name: set PATH
+      command: export PATH=/tmp/skywalking-infra-e2e/bin:$PATH
     - name: install yq
       command: bash test/e2e/script/prepare/setup-e2e/install.sh yq
     - name: install swctl
