fix: update e2e.yaml

--- a/test/e2e/base/provider/Dockerfile
+++ b/test/e2e/base/provider/Dockerfile
@@ -23,6 +23,7 @@ WORKDIR /build
 COPY . /build/skywalking-go
 COPY test/e2e/base/provider /build/provider
 COPY test/e2e/dist/skywalking-go-agent /build/skywalking-go-agent
+RUN chmod +x /build/skywalking-go-agent
 
 WORKDIR /build/provider
 RUN go mod edit -replace=github.com/apache/skywalking-go=../skywalking-go
