--- a/.github/workflows/windows-plugin-test.yaml
+++ b/.github/workflows/windows-plugin-test.yaml
@@ -56,19 +56,27 @@ jobs:
       - name: WSL - Setup Docker
         shell: wsl-run {0}
         run: |
-          # Add Docker's official GPG key:
-          sudo apt-get update
+          for i in {1..3}; do
+          sudo rm -r /var/lib/apt/lists/*
+          sudo mkdir /var/lib/apt/lists/partial
+            sudo apt-get update -qq && break || echo "apt-get update failed, retrying ($i)…"
+          done
+          
           sudo apt-get install -y ca-certificates curl
           sudo install -m 0755 -d /etc/apt/keyrings
           sudo curl -fsSL https://download.docker.com/linux/ubuntu/gpg -o /etc/apt/keyrings/docker.asc
           sudo chmod a+r /etc/apt/keyrings/docker.asc
           
-          # Add the repository to Apt sources:
           echo \
             "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.asc] https://download.docker.com/linux/ubuntu \
             $(. /etc/os-release && echo "$VERSION_CODENAME") stable" | \
             sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
-          sudo apt-get update
+          
+          for i in {1..3}; do
+          sudo rm -r /var/lib/apt/lists/*
+          sudo mkdir /var/lib/apt/lists/partial
+            sudo apt-get update -qq && break || echo "apt-get update failed, retrying ($i)…"
+          done
           
           sudo apt-get install -y docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker-compose-plugin
           
