--- a/.github/workflows/windows-plugin-test.yaml
+++ b/.github/workflows/windows-plugin-test.yaml
@@ -38,12 +38,17 @@ jobs:
           Enable-WindowsOptionalFeature -Online -FeatureName Microsoft-Windows-Subsystem-Linux
           Enable-WindowsOptionalFeature -Online -FeatureName VirtualMachinePlatform
 
-          Invoke-WebRequest -Uri https://wslstorestorage.blob.core.windows.net/wslblob/wsl_update_x64.msi -OutFile wsl_update.msi
-          Start-Process msiexec.exe -Wait -ArgumentList '/i wsl_update.msi /quiet'
-          
           wsl --set-default-version 2
           wsl --update
-          wsl --install -d Ubuntu
+          
+          $distros = (Invoke-RestMethod -Uri https://raw.githubusercontent.com/microsoft/WSL/refs/heads/master/distributions/DistributionInfo.json).Distributions
+          $distroDownloadUrl = $distros.Where({ $_.Name -eq 'Ubuntu' }).Amd64PackageUrl
+          Set-Location $env:GITHUB_WORKSPACE\..\.. 
+          $filename = "Ubuntu$([System.IO.Path]::GetExtension($distroDownloadUrl))"
+          Invoke-WebRequest -Uri $distroDownloadUrl -OutFile $filename
+          Expand-Archive -Path $filename -DestinationPath .\
+          $distroExe = (Get-ChildItem -Path . -Filter *.exe).Where({ $_.Name -notmatch 'splash|setup' }).FullName
+          & $distroExe install --root
           
           @'
           @echo off
