--- a/.github/workflows/publish-docker.yaml
+++ b/.github/workflows/publish-docker.yaml
@@ -38,6 +38,8 @@ jobs:
       - uses: actions/checkout@v2
         with:
           submodules: true
+      - name: Generate proto files
+        run: make generate-proto
       - name: Log in to the Container registry
         uses: docker/login-action@v1.10.0
         with:
