--- a/.github/workflows/windows-plugin-test.yaml
+++ b/.github/workflows/windows-plugin-test.yaml
@@ -124,6 +124,7 @@ jobs:
           export GOPATH=$HOME/go
           export PATH=$GOROOT/bin:$GOPATH/bin:$PATH
           sudo apt-get install -y build-essential
+          make generate-proto 
           cd ~/repo/skywalking-go/test/plugins
           mkdir -p dist
           cd validator && docker build . -t skywalking/agent-test-validator:1.0.0
