--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -30,6 +30,8 @@ jobs:
       - uses: actions/checkout@v2
         with:
           submodules: true
+      - name: Install unzip
+        run: sudo apt-get update && sudo apt-get install -y unzip
       - name: Generate data collect proto
         run: make generate-proto
       - name: Build SkyWalking Go agent
