--- a/.github/workflows/plugin-tests.yaml
+++ b/.github/workflows/plugin-tests.yaml
@@ -55,6 +55,8 @@ jobs:
         uses: actions/checkout@v2
         with:
           submodules: true
+      - name: Install unzip
+        run: sudo apt-get update && sudo apt-get install -y unzip
       - name: Generate data collect proto
         run: make generate-proto
       - name: Build
