--- a/.github/workflows/skywalking-go.yaml
+++ b/.github/workflows/skywalking-go.yaml
@@ -33,6 +33,10 @@ jobs:
         uses: actions/checkout@v2
         with:
           submodules: true
+      - name: Install unzip
+        run: sudo apt-get update && sudo apt-get install -y unzip
+      - name: Generate data collect proto
+        run: make generate-proto
       - name: Check License
         uses: apache/skywalking-eyes@9bd5feb86b5817aa6072b008f9866a2c3bbc8587
       - name: Test
