--- a/.github/workflows/windows-plugin-test.yaml
+++ b/.github/workflows/windows-plugin-test.yaml
@@ -125,6 +125,10 @@ jobs:
           export PATH=$GOROOT/bin:$GOPATH/bin:$PATH
           sudo apt-get install -y build-essential
           sudo apt-get update && sudo apt-get install -y unzip
+          
+          cd ~/repo/skywalking-go
+          find . -name "*.sh" -exec dos2unix {} \;
+          
           make generate-proto 
           cd ~/repo/skywalking-go/test/plugins
           mkdir -p dist
