--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -32,6 +32,8 @@ jobs:
           submodules: true
       - name: Install unzip
         run: sudo apt-get update && sudo apt-get install -y unzip
+      - name: Check Go version
+        run: go version
       - name: Generate data collect proto
         run: make generate-proto
       - name: Build SkyWalking Go agent
