fix(ignore proto license,add make proto for test,extend wait time )

--- a/.licenserc.yaml
+++ b/.licenserc.yaml
@@ -37,6 +37,8 @@ header:
     - 'tools/go-agent/tools/testdata/*'
     - 'VERSION'
     - 'protocols'
+    - 'tools/protocols/temp'
+    - 'tools/protocols/skywalking-data-collect-protocol'
 
   comment: on-failure
 
