--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -59,6 +59,14 @@ jobs:
       - uses: actions/checkout@v2
         with:
           submodules: true
+      - name: Set up Go
+        uses: actions/setup-go@v2
+        with:
+          go-version: 1.19
+      - name: Install unzip
+        run: sudo apt-get update && sudo apt-get install -y unzip
+      - name: Generate data collect proto
+        run: make generate-proto
       - name: Download agent binary
         uses: actions/download-artifact@v4
         with:
