--- a/.github/workflows/plugin-tests.yaml
+++ b/.github/workflows/plugin-tests.yaml
@@ -114,6 +114,14 @@ jobs:
       - uses: actions/checkout@v2
         with:
           submodules: true
+      - name: Set up Go 1.19
+        uses: actions/setup-go@v2
+        with:
+          go-version: 1.19
+      - name: Install unzip
+        run: sudo apt-get update && sudo apt-get install -y unzip
+      - name: Generate data collect proto
+        run: make generate-proto
       - uses: actions/download-artifact@v4
         with:
           name: test-tools-ubuntu-latest
@@ -152,14 +160,18 @@ jobs:
       - uses: actions/checkout@v2
         with:
           submodules: true
-      - uses: actions/download-artifact@v4
-        with:
-          name: test-tools-macos-12
-          path: test/plugins/dist
       - name: Set up Go 1.19
         uses: actions/setup-go@v2
         with:
           go-version: 1.19
+      - name: Install unzip
+        run: brew install unzip
+      - name: Generate data collect proto
+        run: make generate-proto
+      - uses: actions/download-artifact@v4
+        with:
+          name: test-tools-macos-12
+          path: test/plugins/dist
       - name: Setup docker (missing on MacOS)
         if: runner.os == 'macos'
         env:
