fix(force e2e test use 1.19,add generate proto in build)

--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -79,5 +79,7 @@ jobs:
         env:
           GOPROXY: https://goproxy.cn,direct
           GOSUMDB: sum.golang.org
+          GOROOT: /opt/hostedtoolcache/go/1.19.13/x64
+          PATH: /opt/hostedtoolcache/go/1.19.13/x64/bin:${{ env.PATH }}
         with:
           e2e-file: ${{ matrix.case.path }}
