--- a/.github/workflows/skywalking-go.yaml
+++ b/.github/workflows/skywalking-go.yaml
@@ -64,6 +64,10 @@ jobs:
         uses: actions/checkout@v2
         with:
           submodules: true
+      - name: Install unzip
+        run: sudo apt-get update && sudo apt-get install -y unzip
+      - name: Generate data collect proto
+        run: make generate-proto
       - name: Get dependencies
         run: make deps
       - name: Build
