--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -16,7 +16,7 @@
 name: E2E
 
 on:
-  pull_request:
+  push:
 
 jobs:
   build:
@@ -75,7 +75,7 @@ jobs:
           name: skywalking-go-agent
           path: test/e2e/dist/
       - name: Run E2E Tests
-        uses: apache/skywalking-infra-e2e@7e4b5b68716fdb7b79b21fa8908f9db497e1b115
+        uses: apache/skywalking-infra-e2e@@v1.3.0
         env:
           GOPROXY: https://goproxy.cn,direct
           GOSUMDB: sum.golang.org
