--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -75,7 +75,7 @@ jobs:
           name: skywalking-go-agent
           path: test/e2e/dist/
       - name: Run E2E Tests
-        uses: apache/skywalking-infra-e2e@@v1.3.0
+        uses: apache/skywalking-infra-e2e@v1.3.0
         env:
           GOPROXY: https://goproxy.cn,direct
           GOSUMDB: sum.golang.org
