--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -65,8 +65,10 @@ jobs:
         uses: actions/setup-go@v2
         with:
           go-version: 1.19
-      - name: Install unzip
-        run: sudo apt-get update && sudo apt-get install -y unzip
+      - name: Install dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y unzip curl docker-compose
       - name: Generate data collect proto
         run: make generate-proto
       - name: Download agent binary
@@ -75,7 +77,7 @@ jobs:
           name: skywalking-go-agent
           path: test/e2e/dist/
       - name: Run E2E Tests
-        uses: apache/skywalking-infra-e2e@v1.3.0
+        uses: apache/skywalking-infra-e2e@7e4b5b68716fdb7b79b21fa8908f9db497e1b115
         env:
           GOPROXY: https://goproxy.cn,direct
           GOSUMDB: sum.golang.org
