--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -65,6 +65,11 @@ jobs:
         uses: actions/setup-go@v2
         with:
           go-version: 1.19
+      - name: Set up Go 1.19
+        run: |
+          echo "Setting up Go 1.19"
+          echo "/opt/hostedtoolcache/go/1.19.13/x64/bin" >> $GITHUB_PATH
+          go version
       - name: Install dependencies
         run: |
           sudo apt-get update
