--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -16,7 +16,7 @@
 name: E2E
 
 on:
-  pull_request:
+  push:
 
 jobs:
   build:
@@ -64,12 +64,12 @@ jobs:
         uses: actions/checkout@v2
         with:
           submodules: true
-      - name: Install unzip
-        run: sudo apt-get update && sudo apt-get install -y unzip
-      - name: Check Go version
-        run: go version
-      - name: Generate data collect proto
-        run: make generate-proto
+#      - name: Install unzip
+#        run: sudo apt-get update && sudo apt-get install -y unzip
+#      - name: Check Go version
+#        run: go version
+#      - name: Generate data collect proto
+#        run: make generate-proto
       - name: Download agent binary
         uses: actions/download-artifact@v4
         with:
