--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -30,12 +30,6 @@ jobs:
       - uses: actions/checkout@v2
         with:
           submodules: true
-      - name: Install unzip
-        run: sudo apt-get update && sudo apt-get install -y unzip
-      - name: Check Go version
-        run: go version
-      - name: Generate data collect proto
-        run: make generate-proto
       - name: Build SkyWalking Go agent
         run: make -C test/e2e build
       - name: Upload agent binary
@@ -56,20 +50,9 @@ jobs:
           - name: Kafka
             path: test/e2e/case/kafka/e2e.yaml
     steps:
-      - name: Set up Go
-        uses: actions/setup-go@v4
-        with:
-          go-version: 1.24
-      - name: Checkout repository
-        uses: actions/checkout@v2
+      - uses: actions/checkout@v2
         with:
           submodules: true
-#      - name: Install unzip
-#        run: sudo apt-get update && sudo apt-get install -y unzip
-#      - name: Check Go version
-#        run: go version
-#      - name: Generate data collect proto
-#        run: make generate-proto
       - name: Download agent binary
         uses: actions/download-artifact@v4
         with:
