--- a/.github/workflows/plugin-tests.yaml
+++ b/.github/workflows/plugin-tests.yaml
@@ -21,7 +21,7 @@ concurrency:
   cancel-in-progress: true
 
 on:
-  pull_request:
+  push:
 
 jobs:
   build:
@@ -55,10 +55,6 @@ jobs:
         uses: actions/checkout@v2
         with:
           submodules: true
-      - name: Install unzip
-        run: sudo apt-get update && sudo apt-get install -y unzip
-      - name: Generate data collect proto
-        run: make generate-proto
       - name: Build
         run: make -C test/plugins build
       - uses: actions/upload-artifact@v4
@@ -84,7 +80,7 @@ jobs:
           - go-redisv9
           - go-restfulv3
           - gorm
-#          - kratosv2 temporary disable because it's not stable
+          #          - kratosv2 temporary disable because it's not stable
           - microv4
           - mongo
           - mysql
@@ -114,14 +110,6 @@ jobs:
       - uses: actions/checkout@v2
         with:
           submodules: true
-      - name: Set up Go 1.19
-        uses: actions/setup-go@v2
-        with:
-          go-version: 1.19
-      - name: Install unzip
-        run: sudo apt-get update && sudo apt-get install -y unzip
-      - name: Generate data collect proto
-        run: make generate-proto
       - uses: actions/download-artifact@v4
         with:
           name: test-tools-ubuntu-latest
@@ -160,18 +148,14 @@ jobs:
       - uses: actions/checkout@v2
         with:
           submodules: true
-      - name: Set up Go 1.19
-        uses: actions/setup-go@v2
-        with:
-          go-version: 1.19
-      - name: Install unzip
-        run: brew install unzip
-      - name: Generate data collect proto
-        run: make generate-proto
       - uses: actions/download-artifact@v4
         with:
           name: test-tools-macos-12
           path: test/plugins/dist
+      - name: Set up Go 1.19
+        uses: actions/setup-go@v2
+        with:
+          go-version: 1.19
       - name: Setup docker (missing on MacOS)
         if: runner.os == 'macos'
         env:
