--- a/.github/workflows/windows-plugin-test.yaml
+++ b/.github/workflows/windows-plugin-test.yaml
@@ -21,7 +21,7 @@ concurrency:
   cancel-in-progress: true
 
 on:
-  pull_request:
+  push:
 
 jobs:
   test-on-windows:
@@ -40,7 +40,7 @@ jobs:
 
           wsl --set-default-version 2
           wsl --update
-
+          
           $distros = (Invoke-RestMethod -Uri https://raw.githubusercontent.com/microsoft/WSL/refs/heads/master/distributions/DistributionInfo.json).Distributions
           $distroDownloadUrl = $distros.Where({ $_.Name -eq 'Ubuntu' }).Amd64PackageUrl
           Set-Location $env:GITHUB_WORKSPACE\..\.. 
@@ -49,7 +49,7 @@ jobs:
           Expand-Archive -Path $filename -DestinationPath .\
           $distroExe = (Get-ChildItem -Path . -Filter *.exe).Where({ $_.Name -notmatch 'splash|setup' }).FullName
           & $distroExe install --root
-
+          
           @'
           @echo off
           FOR /F "usebackq tokens=*" %%F IN (`wsl wslpath '%~1'`) DO SET wslpath=%%F
@@ -66,27 +66,27 @@ jobs:
           sudo mkdir /var/lib/apt/lists/partial
             sudo apt-get update -qq && break || echo "apt-get update failed, retrying ($i)…"
           done
-
+          
           sudo apt-get install -y ca-certificates curl
           sudo install -m 0755 -d /etc/apt/keyrings
           sudo curl -fsSL https://download.docker.com/linux/ubuntu/gpg -o /etc/apt/keyrings/docker.asc
           sudo chmod a+r /etc/apt/keyrings/docker.asc
-
+          
           echo \
             "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.asc] https://download.docker.com/linux/ubuntu \
             $(. /etc/os-release && echo "$VERSION_CODENAME") stable" | \
             sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
-
+          
           for i in {1..3}; do
           sudo rm -r /var/lib/apt/lists/*
           sudo mkdir /var/lib/apt/lists/partial
             sudo apt-get update -qq && break || echo "apt-get update failed, retrying ($i)…"
           done
-
+          
           sudo apt-get install -y docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker-compose-plugin
-
+          
           sudo service docker start
-
+          
           curl -SL https://github.com/docker/compose/releases/download/v2.2.3/docker-compose-linux-x86_64 -o /usr/local/bin/docker-compose
           sudo chmod +x /usr/local/bin/docker-compose
           docker-compose --version
@@ -95,15 +95,15 @@ jobs:
         run: |
           wget https://go.dev/dl/go1.19.linux-amd64.tar.gz
           sudo tar -C /usr/local -xzf go1.19.linux-amd64.tar.gz
-
+          
           echo 'export GOROOT=/usr/local/go' >> ~/.profile
           echo 'export GOPATH=$HOME/go' >> ~/.profile
           echo 'export PATH=$GOROOT/bin:$GOPATH/bin:$PATH' >> ~/.profile
-
+          
           export GOROOT=/usr/local/go
           export GOPATH=$HOME/go
           export PATH=$GOROOT/bin:$GOPATH/bin:$PATH
-
+          
           go version
 
       - name: Checkout code
@@ -123,13 +123,7 @@ jobs:
           export GOROOT=/usr/local/go
           export GOPATH=$HOME/go
           export PATH=$GOROOT/bin:$GOPATH/bin:$PATH
-          sudo apt-get install -y build-essential dos2unix
-          sudo apt-get update && sudo apt-get install -y unzip
-
-          cd ~/repo/skywalking-go
-          find . -name "*.sh" -exec dos2unix {} \;
-
-          make generate-proto 
+          sudo apt-get install -y build-essential
           cd ~/repo/skywalking-go/test/plugins
           mkdir -p dist
           cd validator && docker build . -t skywalking/agent-test-validator:1.0.0
