--- a/test/plugins/scenarios/logrus/config/excepted.yml
+++ b/test/plugins/scenarios/logrus/config/excepted.yml
@@ -18,8 +18,19 @@ segmentItems: []
 meterItems: []
 logItems:
   - serviceName: logrus
-    logSize: ge 3
+    logSize: ge 4
     logs:
+      - timestamp: nq 0
+        endpoint: ''
+        body:
+          type: TEXT
+          content: { text: 'fetch pprof task commands error rpc error: code = Unimplemented
+              desc = Method not found: skywalking.v10.PprofTask/getPprofTaskCommands' }
+          traceContext: { traceId: N/A, traceSegmentId: N/A, spanId: -1 }
+          tags:
+            data:
+              - { key: LEVEL, value: error }
+          layer: GENERAL
       - timestamp: nq 0
         endpoint: ''
         body:
