test: test workflow

--- a/.github/workflows/plugin-tests.yaml
+++ b/.github/workflows/plugin-tests.yaml
@@ -21,7 +21,13 @@ concurrency:
   cancel-in-progress: true
 
 on:
+  push:
+    branches:
+      - '**'
   pull_request:
+    branches:
+      - '**'
+#  pull_request:
 
 jobs:
   build:
