--- a/test/e2e/case/kafka/docker-compose.yml
+++ b/test/e2e/case/kafka/docker-compose.yml
@@ -32,7 +32,7 @@ services:
       retries: 120
 
   broker-a:
-    image: bitnami/kafka:2.4.1
+    image: bitnamilegacy/kafka:2.4.1
     hostname: broker-a
     expose:
       - 9092
@@ -53,7 +53,7 @@ services:
       retries: 120
 
   broker-b:
-    image: bitnami/kafka:2.4.1
+    image: bitnamilegacy/kafka:2.4.1
     hostname: broker-b
     expose:
       - 9092
