--- a/test/plugins/scenarios/so11y/config/excepted.yml
+++ b/test/plugins/scenarios/so11y/config/excepted.yml
@@ -56,6 +56,21 @@ segmentItems:
               - { key: http.method, value: GET }
               - { key: url, value: 'localhost:8080/propagated' }
               - { key: status_code, value: '200' }
+          - operationName: GET:/ignored.html
+            parentSpanId: 0
+            spanId: 2
+            spanLayer: Http
+            startTime: nq 0
+            endTime: nq 0
+            componentId: 5005
+            isError: false
+            spanType: Exit
+            peer: localhost:8080
+            skipAnalysis: false
+            tags:
+              - { key: http.method, value: GET }
+              - { key: url, value: 'localhost:8080/ignored.html' }
+              - { key: status_code, value: '200' }
           - operationName: GET:/so11y
             parentSpanId: -1
             spanId: 0
@@ -81,13 +96,13 @@ meterItems:
             - {name: source, value: ignore}
         singleValue: 0.0
       - meterId:
-          name: sw_go_finished_tracing_context_counter
-          tags: []
-        singleValue: 4.0
-      - meterId:
           name: sw_go_finished_ignored_context_counter
           tags: []
-        singleValue: 2.0
+        singleValue: 0.0
+      - meterId:
+          name: sw_go_finished_tracing_context_counter
+          tags: []
+        singleValue: 6.0
       - meterId:
           name: sw_go_tracing_context_performance
           tags: []
@@ -106,7 +121,7 @@ meterItems:
           name: sw_go_created_ignored_context_counter
           tags:
             - {name: created_by, value: sampler}
-        singleValue: 2.0
+        singleValue: 0.0
       - meterId:
           name: sw_go_possible_leaked_context_counter
           tags:
@@ -116,5 +131,5 @@ meterItems:
           name: sw_go_created_tracing_context_counter
           tags:
             - {name: created_by, value: sampler}
-        singleValue: 4.0
+        singleValue: 6.0
 logItems: [ ]
